--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             left: 10px;
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            width: 180px; /* Largura fixa para unir os blocos */
+            border: 1px solid #000; /* Cria a sensação de uma bandeira unificada */
         }
         .list {
             display: flex;
             align-items: center;
             padding: 5px 10px;
-            border-radius: 5px;
             font-size: 14px;
-            color: #ffffff; /* Texto branco */
+            color: #000000; /* Texto preto para todas as listas */
         }
         .list-blue {
             background-color: #0057B7; /* Azul para a Ucrânia */
