--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             background-color: #FFD700;
             color: black;
         }
+        td.variacao-positiva {
+            color: green;
+            font-weight: bold;
+        }
+        td.variacao-negativa {
+            color: red;
+            font-weight: bold;
+        }
         .theme-light table {
             border: 1px solid black; /* Bordas pretas no modo diurno */
         }
@@ -117,111 +125,73 @@
                 <tr>
                     <th class="moeda">Moeda:</th>
                     <th class="valor">Valor (BRL):</th>
+                    <th class="valor">Variação (24h)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td class="moeda">Dólar (USD)</td>
                     <td class="valor" id="usd">Carregando...</td>
+                    <td class="valor" id="usd-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Bitcoin (BTC)</td>
                     <td class="valor" id="btc">Carregando...</td>
+                    <td class="valor" id="btc-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Ethereum (ETH)</td>
                     <td class="valor" id="eth">Carregando...</td>
+                    <td class="valor" id="eth-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Litecoin (LTC)</td>
                     <td class="valor" id="ltc">Carregando...</td>
+                    <td class="valor" id="ltc-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Monero (XMR)</td>
                     <td class="valor" id="xmr">Carregando...</td>
+                    <td class="valor" id="xmr-var">Carregando...</td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <div class="info-container">
-        <!-- Informações do Brasil (em cima) -->
-        <div class="info-item">
-            🇧🇷 📅 <span id="data-brasil"></span> ⏰ <span id="hora-brasil"></span>
-        </div>
-
-        <!-- Informações da Ucrânia (em baixo) -->
-        <div class="info-item">
-            🇺🇦 📅 <span id="data-ucrania"></span> ⏰ <span id="hora-ucrania"></span>
-        </div>
-    </div>
-
-    <button class="theme-toggle" id="themeToggle">🌙</button>
-
     <script>
-        function formatarBRL(valor) {
-            if (valor > 1000) {
-                return `R$${valor.toLocaleString('pt-BR', { maximumFractionDigits: 0 })}`;
-            } else {
-                return `R$${valor.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
-            }
-        }
-
         async function fetchCotacoes() {
             try {
-                const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,ethereum,litecoin,monero&vs_currencies=brl');
+                const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,ethereum,litecoin,monero&vs_currencies=brl&include_24hr_change=true');
                 const data = await res.json();
-                document.getElementById('usd').innerText = formatarBRL(data.usd.brl);
-                document.getElementById('btc').innerText = formatarBRL(data.bitcoin.brl);
-                document.getElementById('eth').innerText = formatarBRL(data.ethereum.brl);
-                document.getElementById('ltc').innerText = formatarBRL(data.litecoin.brl);
-                document.getElementById('xmr').innerText = formatarBRL(data.monero.brl);
+
+                atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change);
+                atualizarCotacao('btc', data.bitcoin.brl, data.bitcoin.brl_24h_change);
+                atualizarCotacao('eth', data.ethereum.brl, data.ethereum.brl_24h_change);
+                atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change);
+                atualizarCotacao('xmr', data.monero.brl, data.monero.brl_24h_change);
             } catch (error) {
                 console.error('Erro ao buscar cotações:', error);
                 document.querySelectorAll('td[id]').forEach(td => td.innerText = 'Erro');
             }
         }
 
-        function atualizarDataHora() {
-            const agora = new Date();
+        function atualizarCotacao(moeda, valor, variacao) {
+            const valorElement = document.getElementById(moeda);
+            const variacaoElement = document.getElementById(`${moeda}-var`);
 
-            const dataFormatada = (data) => {
-                const dia = String(data.getDate()).padStart(2, '0');
-                const mes = String(data.getMonth() + 1).padStart(2, '0');
-                const ano = data.getFullYear();
-                return `${dia}.${mes}.${ano}`;
-            };
-
-            const horaFormatada = (hora, opcoes = {}) => {
-                return new Date(hora.toLocaleString('en-US', opcoes))
-                    .toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit', hour12: false });
-            };
-
-            const dataBrasil = dataFormatada(agora);
-            const horaBrasil = horaFormatada(agora);
-
-            const opcoesKiev = { timeZone: 'Europe/Kiev' };
-            const dataUcrania = dataFormatada(new Date(new Date().toLocaleString('en-US', opcoesKiev)));
-            const horaUcrania = horaFormatada(agora, opcoesKiev);
-
-            document.getElementById('data-brasil').innerText = dataBrasil;
-            document.getElementById('hora-brasil').innerText = horaBrasil;
-            document.getElementById('data-ucrania').innerText = dataUcrania;
-            document.getElementById('hora-ucrania').innerText = horaUcrania;
+            valorElement.innerText = `R$ ${valor.toFixed(2)}`;
+            
+            if (variacao >= 0) {
+                variacaoElement.className = 'variacao-positiva';
+                variacaoElement.innerText = `▲ +${variacao.toFixed(2)}%`;
+            } else {
+                variacaoElement.className = 'variacao-negativa';
+                variacaoElement.innerText = `▼ ${variacao.toFixed(2)}%`;
+            }
         }
 
         fetchCotacoes();
-        setInterval(fetchCotacoes, 60000);
-        setInterval(atualizarDataHora, 1000);
-        atualizarDataHora();
-
-        const themeToggle = document.getElementById('themeToggle');
-        themeToggle.addEventListener('click', () => {
-            const body = document.body;
-            body.classList.toggle('theme-light');
-            body.classList.toggle('theme-dark');
-            themeToggle.innerHTML = body.classList.contains('theme-light') ? '🌞' : '🌙';
-        });
+        setInterval(fetchCotacoes, 60000); // Atualiza a cada 60 segundos
     </script>
 </body>
 </html>
