--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             border-collapse: separate;
             border-spacing: 0;
             background-color: white;
-            border: 1px solid white; /* Bordas brancas no modo noturno */
+            border: 1px solid white;
             transition: border-color 0.3s;
         }
         th, td {
@@ -30,7 +30,7 @@
             padding: 8px;
             text-align: left;
             box-sizing: border-box;
-            border: 0.5px solid white; /* Bordas extremamente finas */
+            border: 0.5px solid white;
             transition: border-color 0.3s;
         }
         td + td, th + th {
@@ -40,10 +40,6 @@
             background-color: #0057B7;
             color: #ffffff;
             font-weight: bold;
-        }
-        th:last-child {
-            background-color: #FFD700;
-            color: #000000;
         }
         td.moeda {
             background-color: #0057B7;
@@ -61,11 +57,9 @@
             color: red;
             font-weight: bold;
         }
-        .theme-light table {
-            border: 1px solid black; /* Bordas pretas no modo diurno */
-        }
-        .theme-light th, .theme-light td {
-            border: 0.5px solid black; /* Bordas internas pretas */
+        th.valor, th.variacao {
+            background-color: #FFD700;
+            color: black; /* Fonte preta */
         }
         .info-container {
             position: fixed;
@@ -83,16 +77,22 @@
         }
         .theme-light {
             background-color: #FFFFFF;
-            color: #000000; /* Texto preto no modo diurno */
-        }
-        .theme-light .info-item {
             color: #000000;
+        }
+        .theme-light th {
+            background-color: #0057B7;
+            color: white;
+        }
+        .theme-light td.valor {
+            background-color: #FFD700;
+            color: black;
+        }
+        .theme-light th.valor, .theme-light th.variacao {
+            background-color: #FFD700;
+            color: black;
         }
         .theme-dark {
             background-color: #2B2B2B;
-            color: #FFFFFF; /* Texto branco no modo noturno */
-        }
-        .theme-dark .info-item {
             color: #FFFFFF;
         }
         .theme-toggle {
@@ -103,8 +103,8 @@
             height: 50px;
             border: none;
             border-radius: 25px;
-            background-color: #A9A9A9; /* Bola acinzentada */
-            color: yellow; /* Emojis amarelos */
+            background-color: #A9A9A9; 
+            color: yellow;
             font-size: 20px;
             display: flex;
             align-items: center;
@@ -112,9 +112,6 @@
             cursor: pointer;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: background-color 0.3s, color 0.3s;
-        }
-        .theme-toggle.dark {
-            background-color: #696969; /* Tom de cinza mais escuro */
         }
     </style>
 </head>
@@ -125,7 +122,7 @@
                 <tr>
                     <th class="moeda">Moeda:</th>
                     <th class="valor">Valor (BRL):</th>
-                    <th class="valor">Variação (24h)</th>
+                    <th class="variacao">Variação (24h):</th>
                 </tr>
             </thead>
             <tbody>
@@ -157,6 +154,19 @@
             </tbody>
         </table>
     </div>
+
+    <div class="info-container">
+        <!-- Informações do Brasil (em cima) -->
+        <div class="info-item">
+            🇧🇷 📅 <span id="data-brasil"></span> ⏰ <span id="hora-brasil"></span>
+        </div>
+        <!-- Informações da Ucrânia (em baixo) -->
+        <div class="info-item">
+            🇺🇦 📅 <span id="data-ucrania"></span> ⏰ <span id="hora-ucrania"></span>
+        </div>
+    </div>
+
+    <button class="theme-toggle" id="themeToggle">🌙</button>
 
     <script>
         async function fetchCotacoes() {
@@ -190,8 +200,33 @@
             }
         }
 
+        function atualizarDataHora() {
+            const agora = new Date();
+            const dataBrasil = agora.toLocaleDateString('pt-BR');
+            const horaBrasil = agora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
+
+            const optionsUcrania = { timeZone: 'Europe/Kiev', hour: '2-digit', minute: '2-digit' };
+            const dataUcrania = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
+            const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
+
+            document.getElementById('data-brasil').innerText = dataBrasil;
+            document.getElementById('hora-brasil').innerText = horaBrasil;
+            document.getElementById('data-ucrania').innerText = dataUcrania;
+            document.getElementById('hora-ucrania').innerText = horaUcrania;
+        }
+
         fetchCotacoes();
-        setInterval(fetchCotacoes, 60000); // Atualiza a cada 60 segundos
+        setInterval(fetchCotacoes, 60000);
+        setInterval(atualizarDataHora, 1000);
+        atualizarDataHora();
+
+        const themeToggle = document.getElementById('themeToggle');
+        themeToggle.addEventListener('click', () => {
+            const body = document.body;
+            body.classList.toggle('theme-light');
+            body.classList.toggle('theme-dark');
+                    themeToggle.innerHTML = body.classList.contains('theme-light') ? '🌞' : '🌙';
+    });
     </script>
 </body>
 </html>
