--- a/index.html
+++ b/index.html
@@ -12,40 +12,35 @@
             color: #ffffff; /* Texto branco no modo noturno */
             transition: background-color 0.3s, color 0.3s;
         }
-        .container {
-            position: relative;
-            margin-top: 0;
-        }
         table {
             width: 100%;
             margin: 0 auto;
             border-collapse: separate;
             border-spacing: 0;
             background-color: white;
-            border: 1px solid white;
+            border: 1px solid white; /* Bordas brancas no modo noturno */
             transition: border-color 0.3s;
         }
         th, td {
-            width: 50%;
             padding: 8px;
             text-align: left;
-            box-sizing: border-box;
             border: 0.5px solid white;
             transition: border-color 0.3s;
         }
-        td + td, th + th {
-            border-left: 0.5px solid white;
-        }
-        th {
+        th.moeda {
             background-color: #0057B7;
-            color: #ffffff;
+            color: white;
+        }
+        th.valor, th.variacao {
+            background-color: #FFD700;
+            color: black;
             font-weight: bold;
         }
         td.moeda {
             background-color: #0057B7;
             color: white;
         }
-        td.valor {
+        td.valor, td.variacao {
             background-color: #FFD700;
             color: black;
         }
@@ -57,9 +52,11 @@
             color: red;
             font-weight: bold;
         }
-        th.valor, th.variacao {
-            background-color: #FFD700;
-            color: black; /* Fonte preta */
+        .theme-light table {
+            border: 1px solid black; /* Bordas pretas no modo diurno */
+        }
+        .theme-light th, .theme-light td {
+            border: 0.5px solid black;
         }
         .info-container {
             position: fixed;
@@ -79,18 +76,6 @@
             background-color: #FFFFFF;
             color: #000000;
         }
-        .theme-light th {
-            background-color: #0057B7;
-            color: white;
-        }
-        .theme-light td.valor {
-            background-color: #FFD700;
-            color: black;
-        }
-        .theme-light th.valor, .theme-light th.variacao {
-            background-color: #FFD700;
-            color: black;
-        }
         .theme-dark {
             background-color: #2B2B2B;
             color: #FFFFFF;
@@ -103,7 +88,7 @@
             height: 50px;
             border: none;
             border-radius: 25px;
-            background-color: #A9A9A9; 
+            background-color: #A9A9A9;
             color: yellow;
             font-size: 20px;
             display: flex;
@@ -122,39 +107,38 @@
                 <tr>
                     <th class="moeda">Moeda:</th>
                     <th class="valor">Valor (BRL):</th>
-                    <th class="variacao">Variação (24h):</th>
+                    <th class="variacao">Variação (24H):</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td class="moeda">Dólar (USD)</td>
                     <td class="valor" id="usd">Carregando...</td>
-                    <td class="valor" id="usd-var">Carregando...</td>
+                    <td class="variacao" id="usd-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Bitcoin (BTC)</td>
                     <td class="valor" id="btc">Carregando...</td>
-                    <td class="valor" id="btc-var">Carregando...</td>
+                    <td class="variacao" id="btc-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Ethereum (ETH)</td>
                     <td class="valor" id="eth">Carregando...</td>
-                    <td class="valor" id="eth-var">Carregando...</td>
+                    <td class="variacao" id="eth-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Litecoin (LTC)</td>
                     <td class="valor" id="ltc">Carregando...</td>
-                    <td class="valor" id="ltc-var">Carregando...</td>
+                    <td class="variacao" id="ltc-var">Carregando...</td>
                 </tr>
                 <tr>
                     <td class="moeda">Monero (XMR)</td>
                     <td class="valor" id="xmr">Carregando...</td>
-                    <td class="valor" id="xmr-var">Carregando...</td>
+                    <td class="variacao" id="xmr-var">Carregando...</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
     <div class="info-container">
         <!-- Informações do Brasil (em cima) -->
         <div class="info-item">
@@ -225,8 +209,8 @@
             const body = document.body;
             body.classList.toggle('theme-light');
             body.classList.toggle('theme-dark');
-                    themeToggle.innerHTML = body.classList.contains('theme-light') ? '🌞' : '🌙';
-    });
+            themeToggle.innerHTML = body.classList.contains('theme-light') ? '🌞' : '🌙';
+        });
     </script>
 </body>
 </html>
