--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         th, td {
             padding: 8px;
             text-align: left;
+            box-sizing: border-box;
             border: 0.5px solid white;
             transition: border-color 0.3s;
         }
@@ -31,18 +32,27 @@
             background-color: #0057B7;
             color: white;
         }
-        th.valor, th.variacao {
+        th.valor {
             background-color: #FFD700;
             color: black;
-            font-weight: bold;
+        }
+        th.variacao {
+            background-color: #FFD700;
+            color: black;
+            width: 15%; /* Largura reduzida para a coluna */
         }
         td.moeda {
             background-color: #0057B7;
             color: white;
         }
-        td.valor, td.variacao {
+        td.valor {
             background-color: #FFD700;
             color: black;
+        }
+        td.variacao {
+            background-color: #FFD700; /* Fundo amarelo */
+            color: black;
+            text-align: center; /* Centraliza o texto */
         }
         td.variacao-positiva {
             color: green;
@@ -158,10 +168,10 @@
                 const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,ethereum,litecoin,monero&vs_currencies=brl&include_24hr_change=true');
                 const data = await res.json();
 
-                atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change);
+                atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change, true);
                 atualizarCotacao('btc', data.bitcoin.brl, data.bitcoin.brl_24h_change);
                 atualizarCotacao('eth', data.ethereum.brl, data.ethereum.brl_24h_change);
-                atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change);
+                atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change, true);
                 atualizarCotacao('xmr', data.monero.brl, data.monero.brl_24h_change);
             } catch (error) {
                 console.error('Erro ao buscar cotações:', error);
@@ -169,18 +179,23 @@
             }
         }
 
-        function atualizarCotacao(moeda, valor, variacao) {
+        function atualizarCotacao(moeda, valor, variacao, formatarSimples = false) {
             const valorElement = document.getElementById(moeda);
             const variacaoElement = document.getElementById(`${moeda}-var`);
 
-            valorElement.innerText = `R$ ${valor.toFixed(2)}`;
-            
+            if (formatarSimples) {
+                valorElement.innerText = `R$ ${valor.toFixed(2)}`;
+            } else {
+                valorElement.innerText = `R$ ${(valor / 1000).toLocaleString('pt-BR', { minimumFractionDigits: 0 })}`;
+            }
+
+            variacaoElement.className = 'variacao';
             if (variacao >= 0) {
-                variacaoElement.className = 'variacao-positiva';
+                variacaoElement.classList.add('variacao-positiva');
                 variacaoElement.innerText = `▲ +${variacao.toFixed(2)}%`;
             } else {
-                variacaoElement.className = 'variacao-negativa';
-                variacaoElement.innerText = `▼ ${variacao.toFixed(2)}%`;
+                variacaoElement.classList.add('variacao-negativa');
+                variacaoElement.innerText = `▼ ${Math.abs(variacao).toFixed(2)}%`;
             }
         }
 
@@ -191,7 +206,7 @@
 
             const optionsUcrania = { timeZone: 'Europe/Kiev', hour: '2-digit', minute: '2-digit' };
             const dataUcrania = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
-            const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
+                        const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
 
             document.getElementById('data-brasil').innerText = dataBrasil;
             document.getElementById('hora-brasil').innerText = horaBrasil;
@@ -200,8 +215,8 @@
         }
 
         fetchCotacoes();
-        setInterval(fetchCotacoes, 60000);
-        setInterval(atualizarDataHora, 1000);
+        setInterval(fetchCotacoes, 60000); // Atualiza cotações a cada 60 segundos
+        setInterval(atualizarDataHora, 1000); // Atualiza data e hora a cada 1 segundo
         atualizarDataHora();
 
         const themeToggle = document.getElementById('themeToggle');
