--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         th, td {
             padding: 8px;
-            text-align: left;
+            text-align: left; /* Alinha o texto à esquerda */
             box-sizing: border-box;
             border: 0.5px solid white;
             transition: border-color 0.3s;
@@ -39,7 +39,7 @@
         th.variacao {
             background-color: #FFD700;
             color: black;
-            width: 15%; /* Largura reduzida para a coluna */
+            width: 20%; /* Largura um pouco menor */
         }
         td.moeda {
             background-color: #0057B7;
@@ -52,7 +52,7 @@
         td.variacao {
             background-color: #FFD700; /* Fundo amarelo */
             color: black;
-            text-align: center; /* Centraliza o texto */
+            text-align: left; /* Realinha os números à esquerda */
         }
         td.variacao-positiva {
             color: green;
@@ -150,11 +150,9 @@
         </table>
     </div>
     <div class="info-container">
-        <!-- Informações do Brasil (em cima) -->
         <div class="info-item">
             🇧🇷 📅 <span id="data-brasil"></span> ⏰ <span id="hora-brasil"></span>
         </div>
-        <!-- Informações da Ucrânia (em baixo) -->
         <div class="info-item">
             🇺🇦 📅 <span id="data-ucrania"></span> ⏰ <span id="hora-ucrania"></span>
         </div>
@@ -183,6 +181,8 @@
             const valorElement = document.getElementById(moeda);
             const variacaoElement = document.getElementById(`${moeda}-var`);
 
+            const variacaoAbs = (valor * Math.abs(variacao) / 100).toFixed(2);
+
             if (formatarSimples) {
                 valorElement.innerText = `R$ ${valor.toFixed(2)}`;
             } else {
@@ -192,10 +192,10 @@
             variacaoElement.className = 'variacao';
             if (variacao >= 0) {
                 variacaoElement.classList.add('variacao-positiva');
-                variacaoElement.innerText = `▲ +${variacao.toFixed(2)}%`;
+                variacaoElement.innerText = `▲ +${variacao.toFixed(2)}% (${variacaoAbs})`;
             } else {
                 variacaoElement.classList.add('variacao-negativa');
-                variacaoElement.innerText = `▼ ${Math.abs(variacao).toFixed(2)}%`;
+                variacaoElement.innerText = `▼ ${variacao.toFixed(2)}% (${variacaoAbs})`;
             }
         }
 
@@ -205,8 +205,7 @@
             const horaBrasil = agora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
 
             const optionsUcrania = { timeZone: 'Europe/Kiev', hour: '2-digit', minute: '2-digit' };
-            const dataUcrania = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
-                        const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
+            const dataUcrania = agora.toLocaleDateString('pt-BR');            const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
 
             document.getElementById('data-brasil').innerText = dataBrasil;
             document.getElementById('hora-brasil').innerText = horaBrasil;
