--- a/index.html
+++ b/index.html
@@ -15,48 +15,31 @@
         table {
             width: 100%;
             margin: 0 auto;
-            border-collapse: separate;
-            border-spacing: 0;
+            border-collapse: collapse; /* Mantém as bordas unidas */
             background-color: white;
             border: 1px solid white; /* Bordas brancas no modo noturno */
             transition: border-color 0.3s;
         }
         th, td {
-            padding: 8px;
-            text-align: left; /* Alinha o texto à esquerda */
+            padding: 10px; /* Espaçamento interno */
+            text-align: left;
             box-sizing: border-box;
             border: 0.5px solid white;
-            transition: border-color 0.3s;
+            width: calc(100% / 3); /* Divisão uniforme */
         }
-        th.moeda {
+        th {
             background-color: #0057B7;
             color: white;
         }
-        th.valor, th.variacao {
+        td {
             background-color: #FFD700;
             color: black;
         }
-        th.variacao {
-            width: 20%; /* Largura reduzida */
-        }
-        td.moeda {
-            background-color: #0057B7;
-            color: white;
-        }
-        td.valor {
-            background-color: #FFD700;
-            color: black;
-        }
-        td.variacao {
-            background-color: #FFD700; /* Fundo amarelo */
-            color: black;
-            text-align: left; /* Realinha o texto */
-        }
-        td.variacao-positiva {
+        .variacao-positiva {
             color: green;
             font-weight: bold;
         }
-        td.variacao-negativa {
+        .variacao-negativa {
             color: red;
             font-weight: bold;
         }
@@ -65,28 +48,6 @@
         }
         .theme-light th, .theme-light td {
             border: 0.5px solid black;
-        }
-        .info-container {
-            position: fixed;
-            bottom: 10px;
-            left: 10px;
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            font-size: 14px;
-        }
-        .info-item {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-        .theme-light {
-            background-color: #FFFFFF;
-            color: #000000;
-        }
-        .theme-dark {
-            background-color: #2B2B2B;
-            color: #FFFFFF;
         }
         .theme-toggle {
             position: fixed;
@@ -113,36 +74,36 @@
         <table id="cotacoes">
             <thead>
                 <tr>
-                    <th class="moeda">Moeda:</th>
-                    <th class="valor">Valor (BRL):</th>
-                    <th class="variacao">Variação (24H):</th>
+                    <th>Moeda</th>
+                    <th>Valor (BRL)</th>
+                    <th>Variação (24H)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="moeda">Dólar (USD)</td>
-                    <td class="valor" id="usd">Carregando...</td>
-                    <td class="variacao" id="usd-var">Carregando...</td>
+                    <td id="usd-moeda">Dólar (USD)</td>
+                    <td id="usd">Carregando...</td>
+                    <td id="usd-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td class="moeda">Bitcoin (BTC)</td>
-                    <td class="valor" id="btc">Carregando...</td>
-                    <td class="variacao" id="btc-var">Carregando...</td>
+                    <td id="btc-moeda">Bitcoin (BTC)</td>
+                    <td id="btc">Carregando...</td>
+                    <td id="btc-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td class="moeda">Ethereum (ETH)</td>
-                    <td class="valor" id="eth">Carregando...</td>
-                    <td class="variacao" id="eth-var">Carregando...</td>
+                    <td id="eth-moeda">Ethereum (ETH)</td>
+                    <td id="eth">Carregando...</td>
+                    <td id="eth-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td class="moeda">Litecoin (LTC)</td>
-                    <td class="valor" id="ltc">Carregando...</td>
-                    <td class="variacao" id="ltc-var">Carregando...</td>
+                    <td id="ltc-moeda">Litecoin (LTC)</td>
+                    <td id="ltc">Carregando...</td>
+                    <td id="ltc-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td class="moeda">Monero (XMR)</td>
-                    <td class="valor" id="xmr">Carregando...</td>
-                    <td class="variacao" id="xmr-var">Carregando...</td>
+                    <td id="xmr-moeda">Monero (XMR)</td>
+                    <td id="xmr">Carregando...</td>
+                    <td id="xmr-var">Carregando...</td>
                 </tr>
             </tbody>
         </table>
@@ -209,7 +170,6 @@
             const dataUcrania = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
             const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
 
-            // Atualiza os elementos do DOM com as datas e horas
             document.getElementById('data-brasil').innerText = dataBrasil;
             document.getElementById('hora-brasil').innerText = horaBrasil;
             document.getElementById('data-ucrania').innerText = dataUcrania;
