--- a/index.html
+++ b/index.html
@@ -3,69 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slava Ukraini</title>
+    <title>Tabela de Cotações</title>
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #2B2B2B; /* Tema escuro por padrão */
-            color: #ffffff; /* Texto branco no modo noturno */
+            background-color: #2B2B2B; /* Fundo escuro padrão */
+            color: #ffffff; /* Texto branco por padrão */
             transition: background-color 0.3s, color 0.3s;
         }
         table {
             width: 100%;
-            margin: 0 auto;
-            border-collapse: collapse; /* Mantém as bordas unidas */
+            margin: 20px auto;
+            border-collapse: collapse;
             background-color: white;
-            border: 1px solid white; /* Bordas brancas no modo noturno */
+            border: 1px solid white; /* Bordas brancas padrão */
             transition: border-color 0.3s;
         }
         th, td {
-            padding: 10px; /* Espaçamento interno */
-            text-align: left;
+            padding: 10px;
+            text-align: left; /* Alinha o texto à esquerda */
             box-sizing: border-box;
-            border: 0.5px solid white;
-            width: calc(100% / 3); /* Divisão uniforme */
+            border: 1px solid white;
         }
-        th {
-            background-color: #0057B7;
-            color: white;
+        th.moeda {
+            background-color: #0057B7; /* Fundo azul */
+            color: white; /* Texto branco */
         }
-        td {
-            background-color: #FFD700;
-            color: black;
+        th.valor, th.variacao {
+            background-color: #FFD700; /* Fundo amarelo */
+            color: black; /* Texto preto */
         }
-        .variacao-positiva {
+        td.moeda {
+            background-color: #0057B7; /* Fundo azul */
+            color: white; /* Texto branco */
+        }
+        td.valor {
+            background-color: #FFD700; /* Fundo amarelo */
+            color: black; /* Texto preto */
+        }
+        td.variacao {
+            background-color: #FFD700; /* Fundo amarelo */
+            color: black; /* Texto preto */
+        }
+        td.variacao-positiva {
             color: green;
             font-weight: bold;
         }
-        .variacao-negativa {
+        td.variacao-negativa {
             color: red;
             font-weight: bold;
+        }
+        .info-container {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            font-size: 14px;
+        }
+        .info-item {
+            display: flex;
+            align-items: center;
+            gap: 5px;
         }
         .theme-light table {
             border: 1px solid black; /* Bordas pretas no modo diurno */
         }
         .theme-light th, .theme-light td {
-            border: 0.5px solid black;
+            border: 1px solid black;
         }
-        .theme-toggle {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            width: 50px;
-            height: 50px;
-            border: none;
-            border-radius: 25px;
-            background-color: #A9A9A9;
-            color: yellow;
-            font-size: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s, color 0.3s;
+        .theme-light {
+            background-color: #FFFFFF;
+            color: #000000;
+        }
+        .theme-dark {
+            background-color: #2B2B2B;
+            color: #FFFFFF;
         }
     </style>
 </head>
@@ -74,36 +89,36 @@
         <table id="cotacoes">
             <thead>
                 <tr>
-                    <th>Moeda</th>
-                    <th>Valor (BRL)</th>
-                    <th>Variação (24H)</th>
+                    <th class="moeda">Moeda:</th>
+                    <th class="valor">Valor (BRL):</th>
+                    <th class="variacao">Variação (24H):</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td id="usd-moeda">Dólar (USD)</td>
-                    <td id="usd">Carregando...</td>
-                    <td id="usd-var">Carregando...</td>
+                    <td class="moeda">Dólar (USD)</td>
+                    <td class="valor" id="usd">Carregando...</td>
+                    <td class="variacao" id="usd-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td id="btc-moeda">Bitcoin (BTC)</td>
-                    <td id="btc">Carregando...</td>
-                    <td id="btc-var">Carregando...</td>
+                    <td class="moeda">Bitcoin (BTC)</td>
+                    <td class="valor" id="btc">Carregando...</td>
+                    <td class="variacao" id="btc-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td id="eth-moeda">Ethereum (ETH)</td>
-                    <td id="eth">Carregando...</td>
-                    <td id="eth-var">Carregando...</td>
+                    <td class="moeda">Ethereum (ETH)</td>
+                    <td class="valor" id="eth">Carregando...</td>
+                    <td class="variacao" id="eth-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td id="ltc-moeda">Litecoin (LTC)</td>
-                    <td id="ltc">Carregando...</td>
-                    <td id="ltc-var">Carregando...</td>
+                    <td class="moeda">Litecoin (LTC)</td>
+                    <td class="valor" id="ltc">Carregando...</td>
+                    <td class="variacao" id="ltc-var">Carregando...</td>
                 </tr>
                 <tr>
-                    <td id="xmr-moeda">Monero (XMR)</td>
-                    <td id="xmr">Carregando...</td>
-                    <td id="xmr-var">Carregando...</td>
+                    <td class="moeda">Monero (XMR)</td>
+                    <td class="valor" id="xmr">Carregando...</td>
+                    <td class="variacao" id="xmr-var">Carregando...</td>
                 </tr>
             </tbody>
         </table>
