--- a/index.html
+++ b/index.html
@@ -3,48 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela de Cotações</title>
+    <title>Slava Ukraini</title>
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #2B2B2B; /* Fundo escuro padrão */
-            color: #ffffff; /* Texto branco por padrão */
+            background-color: #2B2B2B; /* Tema escuro por padrão */
+            color: #ffffff; /* Texto branco no modo noturno */
             transition: background-color 0.3s, color 0.3s;
         }
         table {
             width: 100%;
-            margin: 20px auto;
-            border-collapse: collapse;
+            margin: 0 auto;
+            border-collapse: separate;
+            border-spacing: 0;
             background-color: white;
-            border: 1px solid white; /* Bordas brancas padrão */
+            border: 1px solid white; /* Bordas brancas no modo noturno */
             transition: border-color 0.3s;
         }
         th, td {
-            padding: 10px;
+            padding: 8px;
             text-align: left; /* Alinha o texto à esquerda */
             box-sizing: border-box;
-            border: 1px solid white;
+            border: 0.5px solid white;
+            transition: border-color 0.3s;
         }
         th.moeda {
-            background-color: #0057B7; /* Fundo azul */
-            color: white; /* Texto branco */
+            background-color: #0057B7;
+            color: white;
         }
         th.valor, th.variacao {
-            background-color: #FFD700; /* Fundo amarelo */
-            color: black; /* Texto preto */
+            background-color: #FFD700;
+            color: black;
+        }
+        th.variacao {
+            width: 20%; /* Largura reduzida */
         }
         td.moeda {
-            background-color: #0057B7; /* Fundo azul */
-            color: white; /* Texto branco */
+            background-color: #0057B7;
+            color: white;
         }
         td.valor {
-            background-color: #FFD700; /* Fundo amarelo */
-            color: black; /* Texto preto */
+            background-color: #FFD700;
+            color: black;
         }
         td.variacao {
             background-color: #FFD700; /* Fundo amarelo */
-            color: black; /* Texto preto */
+            color: black;
+            text-align: left; /* Realinha o texto */
         }
         td.variacao-positiva {
             color: green;
@@ -53,6 +59,12 @@
         td.variacao-negativa {
             color: red;
             font-weight: bold;
+        }
+        .theme-light table {
+            border: 1px solid black; /* Bordas pretas no modo diurno */
+        }
+        .theme-light th, .theme-light td {
+            border: 0.5px solid black;
         }
         .info-container {
             position: fixed;
@@ -68,12 +80,6 @@
             align-items: center;
             gap: 5px;
         }
-        .theme-light table {
-            border: 1px solid black; /* Bordas pretas no modo diurno */
-        }
-        .theme-light th, .theme-light td {
-            border: 1px solid black;
-        }
         .theme-light {
             background-color: #FFFFFF;
             color: #000000;
@@ -81,6 +87,24 @@
         .theme-dark {
             background-color: #2B2B2B;
             color: #FFFFFF;
+        }
+        .theme-toggle {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            width: 50px;
+            height: 50px;
+            border: none;
+            border-radius: 25px;
+            background-color: #A9A9A9;
+            color: yellow;
+            font-size: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, color 0.3s;
         }
     </style>
 </head>
@@ -185,6 +209,7 @@
             const dataUcrania = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
             const horaUcrania = agora.toLocaleTimeString('pt-BR', optionsUcrania);
 
+            // Atualiza os elementos do DOM com as datas e horas
             document.getElementById('data-brasil').innerText = dataBrasil;
             document.getElementById('hora-brasil').innerText = horaBrasil;
             document.getElementById('data-ucrania').innerText = dataUcrania;
